# bob-the-builder

./: .gitignore  setup.cfg
bobthebuilder/cli/: main.py
src/bobthebuilder/: __init__.py  builder.py
src/bobthebuilder/builder/: __init__.py  builder.py
src/bobthebuilder/cli/: __init__.py  main.py
src/bobthebuilder/config/: __init__.py  inimod.py
