[metadata]
name = bob-the-builder
version = 0.1.3
author = Dmitriy Shelestovskiy
description = Simplify defold game engine builds
url = https://github.com/sonhador82/bob-the-builder
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bobbuilder = bobthebuilder.cli:build_cli
